# iot_practice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.sim  ExportedEstimate.xlsx  Grafana.md  Makefile  README.md  SIMS.postman_collection.json  cost_estimate.md  devsim.py  docker-compose.yaml  fake_data.sql
.sqlx/: query-35cd8211132b17db7b1023f2b8932004db31ba1656928837783a1090cfdf4d42.json  query-3c136192282ada3254b4db01039a04a989f2e97bf7b2f9a1833964652554da09.json  query-470ea7fbb6d3c7d0a864e4eb08032a167a509ea5ddd887d893c8043f1f67dd44.json  query-6daed8b1972062b2dfa4aca68c6fca8625f85beb95f2e5961f182828ad3e1dd6.json  query-f2576dd2616145dbf8697066e31cc8e7bf966979532a09f2f077e6fb9517bae8.json  query-fbd2c9bef829dd99ae176e31dc174e5514771d71557b2a5be0fd5977a66d3ae3.json
architecture/: IoT_C4.drawio
deploy/: README.md  main.tf
migrations/: 20250128151812_staff_accounts.sql  20250129091019_sensors_data.sql
secret/: README.md
src/: lib.rs  main.rs  secret.rs
src/model/: mod.rs  sensors.rs  staff.rs
src/repository/: mod.rs  sensors_repository.rs  staff_repository.rs
src/routes/: mod.rs
static/: index.html
static/js/: app.js
static/styles/: style.css
