[package]
name = "iot_practice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
error_tools = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12.0"
sqlx = { version = "0.8.3", features = [ "tls-rustls", "postgres", "runtime-tokio-rustls", "chrono" ] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
